--- a/app/src/main/res/layout/fragment_adcionar_dados.xml
+++ b/app/src/main/res/layout/fragment_adcionar_dados.xml
@@ -46,12 +46,13 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="438dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:hint="Porcentagem " />
         </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
